--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 			<artifactId>log4j-web</artifactId>
 			<version>2.8.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.mindrot</groupId>
+		    <artifactId>jbcrypt</artifactId>
+		    <version>0.4</version>
+		</dependency>
 
 	</dependencies>
 	
