--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,11 @@
 		    <artifactId>jbcrypt</artifactId>
 		    <version>0.4</version>
 		</dependency>
-
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+		    <version>0.7.0</version>
+		</dependency>
 	</dependencies>
 	
 	<profiles>
@@ -181,6 +185,10 @@
 						<replacement>
 							<token>@DARKSKY_API_KEY@</token>
 							<value>${DARKSKY_API_KEY}</value>
+						</replacement>
+						<replacement>
+							<token>@JWT_KEY@</token>
+							<value>${JWT_KEY}</value>
 						</replacement>
 					</replacements>
 				</configuration>
