--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -3,3 +3,7 @@ GOOGLE_API_KEY=@GOOGLE_API_KEY@
 DARKSKY_API_KEY=@DARKSKY_API_KEY@
 
 JWT_KEY=@JWT_KEY@
+
+#Database Credentials
+POSTGRES_USERNAME=@POSTGRES_USERNAME@
+POSTGRES_PASSWORD=@POSTGRES_PASSWORD@
