Added path to lucene index

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -7,3 +7,5 @@ JWT_KEY=@JWT_KEY@
 #Database Credentials
 POSTGRES_USERNAME=@POSTGRES_USERNAME@
 POSTGRES_PASSWORD=@POSTGRES_PASSWORD@
+
+LOCATION_INDEX_PATH=@LOCATION_INDEX_PATH@
