Added deployment script to ignore file and updated finalName

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
 	</profiles>
 
 	<build>
+        <finalName>${artifactId}</finalName>
 		<resources>
 			<resource>
 				<directory>${resourcesDir}</directory>
