Added utility classes to create location csv data and location index

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -3,3 +3,6 @@ GOOGLE_API_KEY=@GOOGLE_API_KEY@
 DARKSKY_API_KEY=@DARKSKY_API_KEY@
 
 LOCATION_INDEX_PATH=@LOCATION_INDEX_PATH@
+ADMIN1_CODES_FILE=@ADMIN1_CODES_FILE@
+GEONAME_CITIES_FILE=@GEONAME_CITIES_FILE@
+COUNTRY_CODES_FILE=@COUNTRY_CODES_FILE@
