--- a/config/prod.properties
+++ b/config/prod.properties
@@ -1,1 +1,4 @@
 LOCATION_INDEX_PATH=/var/lib/rain-predictor/indices/location_index
+ADMIN1_CODES_FILE=admin1CodesASCII.txt
+GEONAME_CITIES_FILE=cities1000.txt
+COUNTRY_CODES_FILE=country_code_mappings.csv
